domain adapted to production environment

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
   <body>
     <header>
       <nav>
-        <a href="https://the-snap.herokuapp.com/"
+        <a href="https://snap.openpolis.io/"
           ><img alt="The SNap" src="./logo.png" height="70"
         /></a>
         <ul>
@@ -80,7 +80,7 @@
         Made by
         <a href="https://www.chrkaatz.de" target="_blank"
           >Christian Kaatz &nearr;</a
-        ><br />
+        >, adapted for Openpolis by Guglielmo Celata<br />
       </p>
     </footer>
   </body>
